fix: file paths

--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -1,6 +1,6 @@
 .headerWrapper {
     border-bottom: 1px solid #e9ecef;
-    background-image: url("src/assets/images/background/back.png");
+    background-image: url("/images/background/back.png");
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
